Added simple MA example

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 Ruby Wrapper for ta-lib (http://ta-lib.org/).
 
 This project has been started by Timur Adigamov on Rubyforge (http://rubyforge.org/projects/talib-ruby/),
-but since it didn't build on my machine and wasn't complete i modified it slightly, et voilˆ.
+but since it didn't build on my machine and wasn't complete i modified it slightly, et voil&agrave;.
 
 Install and build instructions
 ==============================
