--- a/README.textile
+++ b/README.textile
@@ -7,16 +7,24 @@ but since it didn't build on my machine and wasn't complete i modified it slight
 
 h3. Install and build instructions
 
-# Install ta-lib from MacPorts: sudo port install ta-lib
-# Checkout talib-ruby (it includes the ta-lib directories /include and /lib from
-   the MacPorts version)
-# Now run the following commands in talib-ruby:
+Install ta-lib from "MacPorts":http://www.macports.org/ports.php?by=name&substr=ta-lib:
 
-    * ARCHFLAGS="-arch i386" ruby extconf.rb --with-talib-dir=/ABSOLUTE_PATH_OF/talib-ruby
-      should output 'checking for TA_Initialize() in -lta_lib... yes'
-                    'creating Makefile'
-    * make -> creates talib.bundle
-    * sudo make install -> copies talib.bundle to /Library/Ruby/Site/1.8/universal-darwin9.0
+bc. sudo port install ta-lib
+
+Checkout talib-ruby (it includes the ta-lib directories /include and /lib from the MacPorts version)
+
+Now run the following commands in talib-ruby:
+
+bc. ARCHFLAGS="-arch i386" ruby extconf.rb --with-talib-dir=/ABSOLUTE_PATH_OF/talib-ruby
+
+-> should output 'checking for TA_Initialize() in -lta_lib... yes'
+                 'creating Makefile'
+
+bc. make
+
+-> creates talib.bundle
+
+bc. sudo make install -> copies talib.bundle to /Library/Ruby/Site/1.8/universal-darwin9.0
 
 Now ta-lib can be used by using _require 'talib'_
 
