--- a/README.textile
+++ b/README.textile
@@ -11,24 +11,15 @@ Install ta-lib from "MacPorts":http://www.macports.org/ports.php?by=name&substr=
 
 bc. sudo port install ta-lib
 
-Checkout talib-ruby (it includes the ta-lib directories /include and /lib from the MacPorts version)
+Install the ruby wrapper talib_ruby
 
-Now run the following commands in talib-ruby:
+bc. sudo env ARCHFLAGS="-arch PLATFORM i386" gem install talib_ruby -- --with-talib-include=ABSOLUTE_PATH_TO_TALIB_HEADERS  --with-talib-lib=ABSOLUTE_PATH_TO_TALIB_LIBS
 
-bc. ARCHFLAGS="-arch i386" ruby extconf.rb --with-talib-dir=/ABSOLUTE_PATH_OF/talib-ruby
-
--> should output 'checking for TA_Initialize() in -lta_lib... yes' and 'creating Makefile'
-
-bc. make
-
--> creates talib.bundle
-
-bc. sudo make install
-
--> copies talib.bundle to /Library/Ruby/Site/1.8/universal-darwin9.0
+* PLATFORM = [i386 | x86_64 | ...]
+* ABSOLUTE_PATH_TO_TALIB_HEADERS = The path the the ta-lib header files (e.g. /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/include/ta-lib)
+* ABSOLUTE_PATH_TO_TALIB_LIBS = Tha path to the ta-lib lib files (e.g. /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/lib)
 
 Now ta-lib can be used by using _require 'talib'_
-
 
 h3. Useful links
 
