--- a/README.textile
+++ b/README.textile
@@ -16,10 +16,10 @@ Install the ruby wrapper talib_ruby
 bc. sudo env ARCHFLAGS="-arch PLATFORM" gem install talib_ruby -- --with-talib-include=ABSOLUTE_PATH_TO_TALIB_HEADERS  --with-talib-lib=ABSOLUTE_PATH_TO_TALIB_LIBS
 
 * PLATFORM = [i386 | x86_64 | ...]
-* ABSOLUTE_PATH_TO_TALIB_HEADERS = The path the the ta-lib header files (e.g. /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/include/ta-lib)
+* ABSOLUTE_PATH_TO_TALIB_HEADERS = The path to the ta-lib header files (e.g. /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/include/ta-lib)
 * ABSOLUTE_PATH_TO_TALIB_LIBS = Tha path to the ta-lib lib files (e.g. /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/lib)
 
-Now ta-lib can be used by using _require 'talib'_
+Now ta-lib can be used by using _require 'talib_ruby'_
 
 h3. Useful links
 
