--- a/README.textile
+++ b/README.textile
@@ -17,11 +17,36 @@ bc. sudo env ARCHFLAGS="-arch PLATFORM" gem install talib_ruby -- --with-talib-i
 
 * PLATFORM = [i386 | x86_64 | ...]
 * ABSOLUTE_PATH_TO_TALIB_HEADERS = The path to the ta-lib header files (e.g. /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/include/ta-lib)
-* ABSOLUTE_PATH_TO_TALIB_LIBS = Tha path to the ta-lib lib files (e.g. /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/lib)
+* ABSOLUTE_PATH_TO_TALIB_LIBS = The path to the ta-lib lib files (e.g. /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/lib)
 
 Now ta-lib can be used by using _require 'talib_ruby'_
+Works on Leopard and Snow Leopard. Has not been tested on Windows.
+
+h3. Example
+
+bc. require 'rubygems'
+    require 'talib_ruby'
+
+    # init input data
+    a = Array.new
+    10.times { |i| a.push i.to_f }
+
+    10.times do |k|
+        b = Array.new(10)
+        l = TaLib::Function.new("MA")
+        # setup input parameter
+        l.in_real(0,a);
+        # setup optional parameter
+        l.opt_int(0,k+2);
+        # setup output parameter
+        l.out_real(0,b);
+        l.call(0,9)
+        p "k=#{k+2}"
+        p b
+    end
 
 h3. Useful links
 
 * "TA-Lib Forum":http://www.tadoc.org/forum/index.php?board=9.0
 * "XML explanation":http://ta-lib.svn.sourceforge.net/viewvc/ta-lib/trunk/ta-lib/ta_func_api.xml?view=markup of all supported Functions
+* "C/C++ API Documentation":http://ta-lib.org/d_api/d_api.html
