--- a/README.textile
+++ b/README.textile
@@ -37,11 +37,11 @@ a = Array.new
     b = Array.new(10)
     l = TaLib::Function.new("MA")
     # setup input parameter
-    l.in_real(0,a);
+    l.in_real(0,a)
     # setup optional parameter
-    l.opt_int(0,k+2);
+    l.opt_int(0,k+2)
     # setup output parameter
-    l.out_real(0,b);
+    l.out_real(0,b)
     l.call(0,9)
     p "k=#{k+2}"
     p b
