--- a/README.textile
+++ b/README.textile
@@ -42,6 +42,7 @@ a = Array.new
     l.opt_int(0,k+2)
     # setup output parameter
     l.out_real(0,b)
+    lookback = l.lookback
     l.call(0,9)
     p "k=#{k+2}"
     p b
