--- a/README.textile
+++ b/README.textile
@@ -11,13 +11,21 @@ Install ta-lib from "MacPorts":http://www.macports.org/ports.php?by=name&substr=
 
 bc. sudo port install ta-lib
 
+Or install ta-lib from "Homebrew":https://github.com/mxcl/homebrew/blob/master/Library/Formula/ta-lib.rb:
+
+bc. sudo brew install ta-lib
+
 Install the ruby wrapper talib_ruby:
 
 bc. sudo env ARCHFLAGS="-arch PLATFORM" gem install talib_ruby -- --with-talib-include=ABSOLUTE_PATH_TO_TALIB_HEADERS  --with-talib-lib=ABSOLUTE_PATH_TO_TALIB_LIBS
 
 * PLATFORM = [i386 | x86_64 | ...]
-* ABSOLUTE_PATH_TO_TALIB_HEADERS = The path to the ta-lib header files (e.g. /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/include/ta-lib)
-* ABSOLUTE_PATH_TO_TALIB_LIBS = The path to the ta-lib lib files (e.g. /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/lib)
+* ABSOLUTE_PATH_TO_TALIB_HEADERS = The path to the ta-lib header files
+** e.g. for Port: /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/include/ta-lib
+** e.g. for Homebrew: /usr/local/Cellar/ta-lib/0.4.0/include/ta-lib
+* ABSOLUTE_PATH_TO_TALIB_LIBS = The path to the ta-lib lib files
+** e.g. fo Port: /opt/local/var/macports/software/ta-lib/0.4.0_0/opt/local/lib)
+** e.g. fo Homebrew: /usr/local/Cellar/ta-lib/0.4.0/lib
 
 Now ta-lib can be used by using _require 'talib_ruby'_
 Works on Leopard and Snow Leopard. Has not been tested on Windows.
